--- a/FluxDeck/FDFlowViewController.xib
+++ b/FluxDeck/FDFlowViewController.xib
@@ -64,7 +64,6 @@
 												<array class="NSMutableArray" key="NSSubviews"/>
 												<string key="NSFrameSize">{173, 675}</string>
 												<reference key="NSSuperview" ref="315387802"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="156719024"/>
 												<string key="NSReuseIdentifierKey">_NS:13</string>
 												<bool key="NSEnabled">YES</bool>
@@ -166,7 +165,6 @@
 										</array>
 										<string key="NSFrame">{{1, 1}, {173, 675}}</string>
 										<reference key="NSSuperview" ref="208665359"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="459115529"/>
 										<string key="NSReuseIdentifierKey">_NS:11</string>
 										<reference key="NSDocView" ref="459115529"/>
@@ -178,7 +176,6 @@
 										<int key="NSvFlags">-2147483392</int>
 										<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 										<reference key="NSSuperview" ref="208665359"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="124942964"/>
 										<string key="NSReuseIdentifierKey">_NS:58</string>
 										<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -191,7 +188,6 @@
 										<int key="NSvFlags">-2147483392</int>
 										<string key="NSFrame">{{1, 119}, {237, 15}}</string>
 										<reference key="NSSuperview" ref="208665359"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="568017510"/>
 										<string key="NSReuseIdentifierKey">_NS:60</string>
 										<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -203,7 +199,6 @@
 								</array>
 								<string key="NSFrameSize">{175, 677}</string>
 								<reference key="NSSuperview" ref="788802067"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="315387802"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<int key="NSsFlags">133682</int>
@@ -228,7 +223,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrameSize">{645, 52}</string>
 												<reference key="NSSuperview" ref="280421580"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="710739915"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="NSEnabled">YES</bool>
@@ -270,10 +264,9 @@
 																<array class="NSMutableArray" key="NSSubviews"/>
 																<string key="NSFrameSize">{643, 624}</string>
 																<reference key="NSSuperview" ref="413031615"/>
-																<reference key="NSWindow"/>
-																<reference key="NSNextKeyView"/>
 																<string key="NSReuseIdentifierKey">_NS:13</string>
 																<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+																<bool key="NSControlAllowsExpansionToolTips">YES</bool>
 																<object class="_NSCornerView" key="NSCornerView">
 																	<nil key="NSNextResponder"/>
 																	<int key="NSvFlags">-2147483392</int>
@@ -330,7 +323,6 @@
 														</array>
 														<string key="NSFrame">{{1, 1}, {643, 624}}</string>
 														<reference key="NSSuperview" ref="1044945956"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="797594746"/>
 														<string key="NSReuseIdentifierKey">_NS:11</string>
 														<reference key="NSDocView" ref="797594746"/>
@@ -342,7 +334,6 @@
 														<int key="NSvFlags">-2147483392</int>
 														<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 														<reference key="NSSuperview" ref="1044945956"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="316885985"/>
 														<string key="NSReuseIdentifierKey">_NS:58</string>
 														<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -355,7 +346,6 @@
 														<int key="NSvFlags">-2147483392</int>
 														<string key="NSFrame">{{1, 119}, {237, 15}}</string>
 														<reference key="NSSuperview" ref="1044945956"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="325800754"/>
 														<string key="NSReuseIdentifierKey">_NS:60</string>
 														<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -367,7 +357,6 @@
 												</array>
 												<string key="NSFrame">{{0, 51}, {645, 626}}</string>
 												<reference key="NSSuperview" ref="280421580"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="413031615"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<int key="NSsFlags">133682</int>
@@ -382,7 +371,6 @@
 										</array>
 										<string key="NSFrameSize">{645, 677}</string>
 										<reference key="NSSuperview" ref="568017510"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1044945956"/>
 										<string key="NSReuseIdentifierKey">_NS:11</string>
 										<string key="NSClassName">NSView</string>
@@ -405,7 +393,6 @@
 																<array class="NSMutableArray" key="NSSubviews"/>
 																<string key="NSFrameSize">{236, 675}</string>
 																<reference key="NSSuperview" ref="966848209"/>
-																<reference key="NSWindow"/>
 																<reference key="NSNextKeyView" ref="733654577"/>
 																<string key="NSReuseIdentifierKey">_NS:13</string>
 																<bool key="NSEnabled">YES</bool>
@@ -467,7 +454,6 @@
 														</array>
 														<string key="NSFrame">{{1, 1}, {236, 675}}</string>
 														<reference key="NSSuperview" ref="210170809"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="322546740"/>
 														<string key="NSReuseIdentifierKey">_NS:11</string>
 														<reference key="NSDocView" ref="322546740"/>
@@ -479,7 +465,6 @@
 														<int key="NSvFlags">-2147483392</int>
 														<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 														<reference key="NSSuperview" ref="210170809"/>
-														<reference key="NSWindow"/>
 														<reference key="NSNextKeyView" ref="230043445"/>
 														<string key="NSReuseIdentifierKey">_NS:58</string>
 														<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -492,7 +477,6 @@
 														<int key="NSvFlags">-2147483392</int>
 														<string key="NSFrame">{{1, 119}, {237, 15}}</string>
 														<reference key="NSSuperview" ref="210170809"/>
-														<reference key="NSWindow"/>
 														<string key="NSReuseIdentifierKey">_NS:60</string>
 														<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 														<int key="NSsFlags">1</int>
@@ -503,7 +487,6 @@
 												</array>
 												<string key="NSFrameSize">{238, 677}</string>
 												<reference key="NSSuperview" ref="710739915"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="966848209"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<int key="NSsFlags">133682</int>
@@ -518,7 +501,6 @@
 										</array>
 										<string key="NSFrame">{{646, 0}, {154, 677}}</string>
 										<reference key="NSSuperview" ref="568017510"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="210170809"/>
 										<string key="NSReuseIdentifierKey">_NS:13</string>
 										<string key="NSClassName">NSView</string>
@@ -526,7 +508,6 @@
 								</array>
 								<string key="NSFrame">{{176, 0}, {800, 677}}</string>
 								<reference key="NSSuperview" ref="788802067"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="280421580"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="NSIsVertical">YES</bool>
@@ -535,7 +516,6 @@
 						</array>
 						<string key="NSFrame">{{0, 8}, {976, 677}}</string>
 						<reference key="NSSuperview" ref="336939059"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="208665359"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSIsVertical">YES</bool>
@@ -544,7 +524,6 @@
 				</array>
 				<string key="NSFrameSize">{976, 685}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="788802067"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="NSClassName">NSView</string>
@@ -1077,7 +1056,6 @@
 						<int key="objectID">217</int>
 						<reference key="object" ref="280421580"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1044945956"/>
 							<reference ref="325800754"/>
 							<object class="IBNSLayoutConstraint" id="92297200">
 								<reference key="firstItem" ref="325800754"/>
@@ -1191,6 +1169,7 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
+							<reference ref="1044945956"/>
 						</array>
 						<reference key="parent" ref="568017510"/>
 					</object>
@@ -1725,56 +1704,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">424</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">FDFlowViewController</string>
-					<string key="superclassName">NSViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">textEntered:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">textEntered:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">textEntered:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="chatTableView">NSTableView</string>
-						<string key="influxTableView">NSTableView</string>
-						<string key="userTableView">NSTableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="chatTableView">
-							<string key="name">chatTableView</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="influxTableView">
-							<string key="name">influxTableView</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userTableView">
-							<string key="name">userTableView</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FDFlowViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
