--- a/FluxDeck/en.lproj/MainMenu.xib
+++ b/FluxDeck/en.lproj/MainMenu.xib
@@ -650,10 +650,11 @@
         <window title="FluxDeck" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="371">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="573" y="419" width="710" height="454"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
+            <rect key="contentRect" x="256" y="355" width="775" height="552"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
+            <value key="minSize" type="size" width="775" height="552"/>
             <view key="contentView" id="372">
-                <rect key="frame" x="0.0" y="0.0" width="710" height="454"/>
+                <rect key="frame" x="0.0" y="0.0" width="775" height="552"/>
                 <autoresizingMask key="autoresizingMask"/>
             </view>
         </window>
